# alerce-explorer-experimental

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Caddyfile  DEPLOY.md  Dockerfile  README.md  RELEASES.md  docker-compose.yml  package-lock.json  package.json  playwright.config.js  pyproject.toml  tailwind.config.js  vitest.config.js
.github/workflows/: tests.yml
scripts/: record_e2e_fixtures.py
src/: app.py
src/routes/: htmx.py  rest.py
src/services/: alerce_client.py  analytics.py  classifiers.py  crossmatch.py  gp.py  lightcurve.py  magstats.py  normalize.py  object_info.py  object_list.py  other_archives.py  replay.py  stamps.py  survey_config.py  xmatch.py  xmatch_cache.py  xmatch_progress.py  ztf_dr.py
src/static/css/: tailwind.css
src/templates/: base.html.jinja  index.html.jinja  input.html.jinja
tests/: test_analytics.py  test_classifiers.py  test_gp.py  test_lightcurve.py  test_magstats.py  test_normalize.py  test_object_info.py  test_object_list.py  test_other_archives.py  test_routes.py  test_stamps.py  test_survey_config.py  test_xmatch.py  test_ztf_dr.py
tests-e2e/: helpers.js
tests-e2e/specs/: aladin-redshift.spec.js  dereddening.spec.js  detail-cleanup-leak.spec.js  detail-lightcurve.spec.js  periodogram-fold.spec.js  search.spec.js  selection.spec.js  smoke.spec.js
tests-js/: airmass.test.js  aladin.test.js  coords.test.js  cosmology.test.js  dust.test.js  lightcurve.test.js  periodogram.test.js  radar.test.js  selection.test.js  specz.test.js  stamps.test.js  stamps_xsurvey.test.js
tests-js/helpers/: load.js
(+50 files in other folders)
