[tool.poetry]
name = "alerce-explorer-experimental"
version = "0.1.0"
description = "htmx-based reimplementation of the ALeRCE Explorer (tutorial)"
authors = ["Francisco Förster <francisco.forster@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
jinja2 = "^3.1.4"
httpx = "^0.27.2"
pydantic-settings = "^2.5.2"
uvicorn = { extras = ["standard"], version = "^0.30.6" }
scikit-learn = "^1.5"
# Bulk crossmatch (services/xmatch.py): astroquery.xmatch → CDS XMatch for
# Simbad/SDSS/DESI + VizieR spec-z catalogs; pyvo → NED TAP. astropy/numpy come
# transitively (numpy already pulled by scikit-learn).
astroquery = "^0.4.7"
pyvo = "^1.5"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
